客户端批次:G117/G122/G124/G126 修复、E70/E71、G108 观察面与治理文档
本批全部经隔离编译与合同验证,未做 fresh 运行验收(全程禁启停进程)。

生产修复:
- G108 战后"召"持续观察:Runner 每秒本地模板观察 + typed fact,窗口开合归云端
- G117 通用关窗误点取消任务:命中日志补 template= 归因,通用池按文件名过滤
- G122 大理寺 NPC 入口:fresh 坐标入容差即 ARRIVED、CONTINUATION 消费不烧候选槽、
  defer 待定态如实上报、UNVERIFIED 点不进已验证回放表
- G124 暂停恢复累计轮次:客户端侧无改动,随云端账本上线
- G126 通用 UI 清理恢复 quxiao 末位兜底(x*.png 优先,quxiao 仅在无 X 时兜底)
- E70 成员断帧门加活跃寻路腿豁免(归队瞬移可被观察到)
- E71 归队标记消失时同步注销自己的 pending

其他:大理寺题库学习产物、事故 fixture、治理文档与 heartbeat 台账。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>